<resources>
    <string name="app_name">MyTripsApplication</string>
    <string name="api_key">AIzaSyCzBPNqi0MlrDC_WsxQh-nFYwqcGLZ_NXc</string>
    <string name="add_trip">Add Trip</string>
    <string name="chat">Open Chatroom</string>
    <string name="other_trips">Trips from other users</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_location_of_places">Map</string>
</resources>
