<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/addTrip"
        android:title="@string/add_trip"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/otherTrips"
        android:title="@string/other_trips"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/chat"
        android:title="@string/chat"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/edit_profile"
        android:title="@string/edit_profile"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never">
    </item>
</menu>